Bug 272771 - [knewstuff] dead end if providers.xml could not be downloaded, program needs restart
Summary: [knewstuff] dead end if providers.xml could not be downloaded, program needs ...
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: knewstuff (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Jeremy Whiting
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-05-08 13:50 UTC by JR
Modified: 2015-01-27 19:26 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description JR 2011-05-08 13:50:49 UTC
Version:           unspecified (using KDE 4.6.2) 
OS:                Linux

Kubuntu 10.10, KDE 4.6.2.

If http://downloads.kde.org/ocs/providers.xml could not be downloaded, such as if caused by DNS failure or network congestion, the program for which you're trying to download new stuff needs to be restarted before a new Get Hot New Stuff attempt can be made. There is no Retry button, and knewstuff seems to remember providers.xml could not be fetched. This was encountered when trying to download new widgets in Plasma desktop.


Reproducible: Didn't try

Steps to Reproduce:
1. Intentionally cause host lookup failure, such as by removing entries in /etc/resolv.conf, or through network congestion
2. Open Get Hot New Stuff, making it try to download providers.xml
3. Encounter error message that it could not load providers from said file, as the downloads.kde.org host could not be resolved
4. Close Get Hot New Stuff window and reopen it

Actual Results:  
5. The same error message is displayed with no way to force a retry attempt

Expected Results:  
5. The providers.xml file should automatically be redownloaded, or at least a Retry/Refresh/Reload button should be offered.

Again, this was tested in Plasma desktop. Perhaps the behavior differs in other programs. I had to restart the shell completely (kquitapp then run plasma-desktop) to be able to get knewstuff to work again.
Comment 1 Christoph Feck 2011-05-10 01:54:36 UTC
That's probably bug 271434, but I keep this one open, as long as it hasn't been confirmed if the bug is in knewstuff or libattica.
Comment 2 Jeremy Whiting 2015-01-27 19:26:24 UTC
Git commit 6df694aab68653a2feb22b6ebc619e168a5f8e9e by Jeremy Whiting.
Committed on 27/01/2015 at 19:25.
Pushed by whiting into branch 'master'.

Always reload xml data from remote urls.

This fixes issues where a previously downloaded xml file is incorrect
or wrong because of network issues.

M  +4    -6    src/core/xmlloader.cpp

http://commits.kde.org/knewstuff/6df694aab68653a2feb22b6ebc619e168a5f8e9e