Always reload xml data from remote urls.

This fixes issues where a previously downloaded xml file is incorrect
or wrong because of network issues.
BUG:272771